This is the first official stable release

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Reqsponse Sandbox</h1>
-
+    <p>This is a min text</p>
     <script src="reqsponse.js"></script>
     <script src="index.js"></script>
 </body>
