Updates to use the latest ES6 features

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Reqsponse Sandbox</title>
+    <title>Reqsponse V2.0.0</title>
 </head>
 
 <body>
-    <h1>Reqsponse Sandbox</h1>
-    <p>This is a min text</p>
+    <h1>Reqsponse V2.0.0</h1>
+
     <script src="reqsponse.js"></script>
     <script src="index.js"></script>
 </body>
